--- a/src/locale/vi_VN/LC_MESSAGES/messages.po
+++ b/src/locale/vi_VN/LC_MESSAGES/messages.po
@@ -77,7 +77,7 @@ msgstr "Họ"
 #: SelectList.php:51 SelectList.php:67 SelectList.php:991 eGive.php:342
 #: Include/Functions.php:1103 Include/Functions.php:1145
 msgid "Unassigned"
-msgstr "Unassigned"
+msgstr "Không gán"
 
 #: AutoPaymentEditor.php:608
 msgid "Automatic payment type"
@@ -174,7 +174,7 @@ msgstr "Thẻ tín dụng"
 
 #: AutoPaymentEditor.php:718
 msgid "Vanco Credit Card Method"
-msgstr "Thẻ tín dụng Vanco"
+msgstr ""
 
 #: AutoPaymentEditor.php:726
 msgid "Expiration Month"
@@ -196,6 +196,7 @@ msgstr "Mã số Ngân hàng"
 msgid "Bank Account Number"
 msgstr "Số tài khoản ngân hàng"
 
+#. I don't understand "Vanco", someone can help me pls ?
 #: AutoPaymentEditor.php:753
 msgid "Vanco Bank Account Method"
 msgstr ""
@@ -206,7 +207,7 @@ msgstr "Cơ sở dữ liệu sao lưu"
 
 #: BackupDatabase.php:47
 msgid "This tool will assist you in manually backing up the ChurchCRM database."
-msgstr "Công cụ này sẽ giúp bạn tự sao lưu cơ sở dữ liệu ChurchCRM."
+msgstr "Công cụ này sẽ giúp bạn tự sao lưu cơ sở dữ liệu Hệ Thống Quản Lý Hội Thánh"
 
 #: BackupDatabase.php:51
 msgid "You should make a manual backup at least once a week unless you already have a regular backup procedule for your systems."
@@ -218,7 +219,7 @@ msgstr "Sau khi bạn tải về các tập tin sao lưu, bạn nên làm cho ha
 
 #: BackupDatabase.php:53
 msgid "If you are concerned about confidentiality of data stored in the ChurchCRM database, you should encrypt the backup data if it will be stored somewhere potentially accessible to others"
-msgstr "Nếu bạn lo lắng về tính bảo mật của dữ liệu được lưu trữ trong cơ sở dữ liệu ChurchCRM, bạn nên mã hóa dữ liệu sao lưu nếu nó sẽ được lưu trữ ở đâu đó có khả năng tiếp cận với những người khác"
+msgstr "Nếu bạn lo lắng về tính bảo mật của dữ liệu được lưu trữ trong cơ sở dữ liệu của Hệ Thống Quản Lý Hội Thánh, bạn nên mã hóa dữ liệu sao lưu nếu nó sẽ được lưu trữ ở đâu đó có khả năng tiếp cận với những người khác"
 
 #: BackupDatabase.php:54
 msgid "For added backup security, you can e-mail the backup to yourself at an e-mail account hosted off-site or to a trusted friend.  Be sure to use encryption if you do this, however."
@@ -271,7 +272,7 @@ msgstr ""
 
 #: BatchWinnerEntry.php:75 FundRaiserEditor.php:201
 msgid "Item"
-msgstr "Hạng mục"
+msgstr ""
 
 #: BatchWinnerEntry.php:76
 msgid "Winner"
@@ -279,7 +280,7 @@ msgstr ""
 
 #: BatchWinnerEntry.php:77
 msgid "Price"
-msgstr "Giá"
+msgstr ""
 
 #: BatchWinnerEntry.php:112
 msgid "Enter Winners"
@@ -291,7 +292,7 @@ msgstr "Xuất CSV"
 
 #: CSVExport.php:78
 msgid "Field Selection"
-msgstr "Lựa chọn lĩnh vực"
+msgstr "Lựa chọn trường"
 
 #: CSVExport.php:82 PersonEditor.php:600
 msgid "Last Name:"
@@ -299,7 +300,7 @@ msgstr "Họ:"
 
 #: CSVExport.php:83
 msgid "Required"
-msgstr "Cần thiết"
+msgstr "Bắt buộc"
 
 #: CSVExport.php:88 DonatedItemEditor.php:226 FundRaiserEditor.php:179
 #: PersonEditor.php:573
@@ -316,7 +317,7 @@ msgstr "Tên đệm:"
 
 #: CSVExport.php:103 PersonEditor.php:609
 msgid "Suffix:"
-msgstr "suffix"
+msgstr ""
 
 #: CSVExport.php:108 CartToFamily.php:239 FamilyEditor.php:687
 #: PersonEditor.php:753
@@ -362,7 +363,7 @@ msgstr "Điện thoại nhà:"
 #: FamilyView.php:208 PersonEditor.php:893 PersonEditor.php:895
 #: PersonView.php:266 PrintView.php:171
 msgid "Work Phone:"
-msgstr "Điện thoại làm việc"
+msgstr "Điện thoại công việc:"
 
 #: CSVExport.php:153 CartToFamily.php:306 FamilyEditor.php:780
 #: FamilyView.php:211 PersonEditor.php:915 PersonEditor.php:917
@@ -422,16 +423,16 @@ msgstr "Bản ghi để xuất:"
 
 #: CSVExport.php:274
 msgid "Based on filters below.."
-msgstr "Dựa trên bộ lọc dưới đây .."
+msgstr "Dựa trên bộ lọc dưới đây.."
 
 #: CSVExport.php:275
 msgid "People in Cart (filters ignored)"
-msgstr "Mọi người trong Giỏ hàng (lọc bỏ qua)"
+msgstr ""
 
 #: CSVExport.php:284 FinancialReports.php:117 PersonEditor.php:1008
 #: PrintView.php:268
 msgid "Classification:"
-msgstr "sự phân loại của bạn:"
+msgstr "Phân loại:"
 
 #: CSVExport.php:303 CSVExport.php:330 CSVExport.php:366
 #: DirectoryReports.php:87 DirectoryReports.php:104 DirectoryReports.php:124
@@ -441,7 +442,7 @@ msgstr "Sử dụng Ctrl Key để chọn nhiều"
 
 #: CSVExport.php:338 PersonEditor.php:560 PrintView.php:205
 msgid "Gender:"
-msgstr "tính"
+msgstr "Giới tính"
 
 #: CSVExport.php:347
 msgid "Don't Filter"
@@ -450,7 +451,7 @@ msgstr "Không lọc"
 #: CSVExport.php:348 FamilyEditor.php:982 PersonEditor.php:566
 #: PrintView.php:212 PrintView.php:321 SelectList.php:510 SelectList.php:1032
 msgid "Male"
-msgstr "Name"
+msgstr "Nam"
 
 #: CSVExport.php:349 FamilyEditor.php:983 PersonEditor.php:569
 #: PrintView.php:215 PrintView.php:321 SelectList.php:515 SelectList.php:1033
@@ -464,11 +465,11 @@ msgstr "Thành viên trong nhóm:"
 #: CSVExport.php:391 CSVExport.php:408 CSVExport.php:425 CSVExport.php:442
 #: CartView.php:438 EmailEditor.php:73
 msgid "From:"
-msgstr "Từ:"
+msgstr "Gửi từ:"
 
 #: CSVExport.php:392 CSVExport.php:409 CSVExport.php:426 CSVExport.php:443
 msgid "To:"
-msgstr "Đến:"
+msgstr "Gửi đến:"
 
 #: CSVExport.php:400
 msgid "Birthday Date:"
@@ -480,35 +481,35 @@ msgstr "Ngày kỷ niệm:"
 
 #: CSVExport.php:434
 msgid "Date Entered:"
-msgstr "Ngày nhập:"
+msgstr "Ngày nhập dữ liệu:"
 
 #: CSVExport.php:455 FinancialReports.php:321
 msgid "Output Method:"
-msgstr "Output Method:"
+msgstr ""
 
 #: CSVExport.php:459
 msgid "CSV Individual Records"
-msgstr "CSV ghi cá nhân"
+msgstr ""
 
 #: CSVExport.php:460
 msgid "CSV Combine Families"
-msgstr "CSV Kết hợp Gia đình"
+msgstr ""
 
 #: CSVExport.php:461
 msgid "Add Individuals to Cart"
-msgstr "Thêm vào giỏ hàng Cá nhân"
+msgstr ""
 
 #: CSVExport.php:464
 msgid "Skip records with incomplete mail address"
-msgstr "Bỏ qua các bản ghi với địa chỉ email đầy đủ"
+msgstr ""
 
 #: CSVExport.php:466
 msgid "Create File"
-msgstr "Tạo file"
+msgstr "Tạo tập tin"
 
 #: CSVImport.php:120
 msgid "CSV Import"
-msgstr ""
+msgstr "Nhập CSV"
 
 #: CSVImport.php:140
 msgid "No file selected for upload."
@@ -516,11 +517,11 @@ msgstr "Không có tập tin được lựa chọn để tải lên."
 
 #: CSVImport.php:165
 msgid "Total number of rows in the CSV file:"
-msgstr "Tổng số hàng trong các tập tin CSV:"
+msgstr "Tổng số hàng trong tập tin CSV:"
 
 #: CSVImport.php:228
 msgid "Ignore this Field"
-msgstr "Bỏ qua Dòng này"
+msgstr "Bỏ qua trường này"
 
 #: CSVImport.php:229 FindFundRaiser.php:226 FundRaiserEditor.php:205
 msgid "Title"
@@ -541,34 +542,34 @@ msgstr "Họ"
 
 #: CSVImport.php:233 FamilyEditor.php:938
 msgid "Suffix"
-msgstr "suffix"
+msgstr ""
 
 #: CSVImport.php:234 FamilyEditor.php:939 PrintView.php:295
 #: sundayschool/SundaySchoolClassView.php:169
 msgid "Gender"
-msgstr "tính"
+msgstr "Giới tính"
 
 #: CSVImport.php:235
 msgid "Donation Envelope"
-msgstr "tặng Envelope"
+msgstr ""
 
 #: CSVImport.php:236
 msgid "Address1"
-msgstr "Địa chỉ 2:"
+msgstr "Địa chỉ 1"
 
 #: CSVImport.php:237
 msgid "Address2"
-msgstr "Địa chỉ 2:"
+msgstr "Địa chỉ 2"
 
 #: CSVImport.php:242 EditEventAttendees.php:53 EventAttendance.php:204
 #: FamilyList.php:24 GroupReports.php:133
 #: sundayschool/SundaySchoolClassView.php:195
 msgid "Home Phone"
-msgstr "Điện thoại nhà:"
+msgstr "Điện thoại nhà"
 
 #: CSVImport.php:243 GroupReports.php:134
 msgid "Work Phone"
-msgstr "Điện thoại làm việc"
+msgstr "Điện thoại công việc"
 
 #: CSVImport.php:244
 msgid "Mobile Phone"
@@ -576,16 +577,16 @@ msgstr "Di động: "
 
 #: CSVImport.php:246
 msgid "Work / Other Email"
-msgstr "Làm việc / Email khác"
+msgstr "Email làm việc/khác"
 
 #: CSVImport.php:247 sundayschool/SundaySchoolClassView.php:191
 #: sundayschool/SundaySchoolDashboard.php:175
 msgid "Birth Date"
-msgstr "- Năm sinh"
+msgstr "Năm sinh"
 
 #: CSVImport.php:248
 msgid "Membership Date"
-msgstr "ngày hội viên"
+msgstr "Ngày gia nhập"
 
 #: CSVImport.php:249 DirectoryReports.php:175
 msgid "Wedding Date"
@@ -593,27 +594,27 @@ msgstr "Ngày cưới"
 
 #: CSVImport.php:259
 msgid "Ignore first CSV row (to exclude a header)"
-msgstr "Bỏ qua hàng CSV đầu tiên (để loại trừ tiêu đề)"
+msgstr ""
 
 #: CSVImport.php:264
 msgid "Make Family records based on last name and address"
-msgstr "Lập biên bản gia đình dựa trên tên và địa chỉ"
+msgstr "Tạo bản ghi gia đình dựa trên họ và địa chỉ"
 
 #: CSVImport.php:270
 msgid "Patriarch"
-msgstr "Patriarch"
+msgstr ""
 
 #: CSVImport.php:271
 msgid "Matriarch"
-msgstr "matriarch"
+msgstr ""
 
 #: CSVImport.php:273
 msgid "Family Type: used with Make Family records... option above"
-msgstr "Loại gia đình: sử dụng với các hồ sơ Make gia đình ... tùy chọn ở trên"
+msgstr "Loại gia đình: Sử dụng với bản ghi Tạo gia đình...ở tùy chọn bên trên"
 
 #: CSVImport.php:280
 msgid "NOTE: Separators (dashes, etc.) or lack thereof do not matter"
-msgstr "LƯU Ý: Máy phân tách (dấu gạch ngang, vv) hoặc thiếu đó không thành vấn đề"
+msgstr "LƯU Ý: Phân tách bằng (dấu gạch ngang, vv) hoặc thiếu dấu đó thì không thành vấn đề"
 
 #: CSVImport.php:285
 msgid "Default country if none specified otherwise"
@@ -622,11 +623,11 @@ msgstr "Quốc gia mặc định nếu không có quy định khác"
 #: CSVImport.php:304 CartView.php:605 FamilyEditor.php:944
 #: MembersDashboard.php:309 OptionManager.php:71
 msgid "Classification"
-msgstr "sự phân loại của bạn:"
+msgstr "Phân loại:"
 
 #: CSVImport.php:306
 msgid "Perform Import"
-msgstr "thực hiện nhập khẩu"
+msgstr "Thực hiện nhập vào"
 
 #: CSVImport.php:860
 msgid "ERROR: the uploaded CSV file no longer exists!"
@@ -638,7 +639,7 @@ msgstr "Dữ liệu đã xóa thành công!"
 
 #: CSVImport.php:883
 msgid "Please select the confirmation checkbox"
-msgstr "Vui lòng chọn các hộp xác nhận"
+msgstr "Vui lòng chọn các ô xác nhận"
 
 #: CSVImport.php:894
 msgid "Upload CSV File"
@@ -646,27 +647,27 @@ msgstr "Tải lên tập tin CSV"
 
 #: CSVImport.php:905 CSVImport.php:912 CSVImport.php:924
 msgid "Clear Persons and Families"
-msgstr "Rõ ràng người và gia đình"
+msgstr "Xóa sạch thành viên và gia đình"
 
 #: CSVImport.php:917
 msgid "Warning!  Do not select this option if you plan to add to an existing database.<br/>"
-msgstr "Cảnh báo! Không chọn tùy chọn này nếu bạn có kế hoạch để thêm vào một cơ sở dữ liệu hiện có. <br/>"
+msgstr "Cảnh báo! Không chọn vào tùy chọn này nếu bạn có kế hoạch thêm vào một cơ sở dữ liệu hiện có. <br/>"
 
 #: CSVImport.php:918
 msgid "Use only if unsatisfied with initial import.  All person and member data will be destroyed!"
-msgstr "chỉ khi không hài lòng sử dụng với nhập khẩu ban đầu. Tất cả các dữ liệu cá nhân và thành viên sẽ bị phá hủy!"
+msgstr "Chỉ sử dụng khi không hài lòng với lần nhập vào ban đầu. Tất cả dữ liệu thành viên sẽ bị xóa bỏ"
 
 #: CSVImport.php:936
 msgid "Data import successful."
-msgstr "Dữ liệu nhập khẩu thành công."
+msgstr "Nhập dữ liệu thành công"
 
 #: CSVImport.php:936
 msgid "persons were imported"
-msgstr "người đã được nhập khẩu"
+msgstr "thành viên đã được nhập vào"
 
 #: Canvas05Editor.php:29
 msgid "Canvas 2005 Input for the "
-msgstr "Canvas 2005 đầu vào cho "
+msgstr ""
 
 #: Canvas05Editor.php:99
 msgid "Do you like the color of the church?"
@@ -674,23 +675,23 @@ msgstr "Bạn có thích màu sắc của nhà thờ?"
 
 #: Canvas05Editor.php:104
 msgid "What are we doing right?"
-msgstr "Chúng ta làm gì phải không?"
+msgstr ""
 
 #: Canvas05Editor.php:109
 msgid "How can we improve?"
-msgstr "Làm thế nào chúng ta có thể cải thiện?"
+msgstr ""
 
 #: Canvas05Editor.php:114
 msgid "Will you pledge by March 31?"
-msgstr "bạn sẽ cầm cố bằng 31 tháng 3?"
+msgstr ""
 
 #: Canvas05Editor.php:119
 msgid "Canvasser Comments:"
-msgstr "Người vận động Bình luận:"
+msgstr ""
 
 #: CanvassAutomation.php:23 ReportList.php:46
 msgid "Canvass Automation"
-msgstr "canvass Tự động hóa"
+msgstr ""
 
 #: CanvassAutomation.php:51 CanvassAutomation.php:62 CanvassAutomation.php:73
 #: CanvassAutomation.php:85 CanvassAutomation.php:97
@@ -699,93 +700,93 @@ msgstr "Không được xác nhận."
 
 #: CanvassAutomation.php:58 CanvassEditor.php:148 FamilyEditor.php:61
 msgid "Canvassers"
-msgstr "Canvassers"
+msgstr ""
 
 #: CanvassAutomation.php:69 CanvassEditor.php:149 FamilyEditor.php:62
 msgid "BraveCanvassers"
-msgstr "BraveCanvassers"
+msgstr ""
 
 #: CanvassAutomation.php:81
 msgid "Cleared all canvasser assignments."
-msgstr "Xóa tất cả các bài tập người vận động."
+msgstr ""
 
 #: CanvassAutomation.php:93
 msgid "Set Ok To Canvass for all families."
-msgstr "Đặt Ok để vận động cho tất cả các gia đình."
+msgstr ""
 
 #: CanvassAutomation.php:105
 msgid "Disabled Ok To Canvass for all families."
-msgstr "Vô hiệu hóa Ok để vận động cho tất cả các gia đình."
+msgstr ""
 
 #: CanvassAutomation.php:109
 msgid "ClearAllOkToCanvass button not confimed."
-msgstr "nút ClearAllOkToCanvass không confimed."
+msgstr ""
 
 #: CanvassAutomation.php:159
 msgid "Set default fiscal year"
-msgstr "năm tài chính thiết lập mặc định"
+msgstr "thiết lập năm tài chính mặc định"
 
 #: CanvassAutomation.php:163 CanvassAutomation.php:174
 #: CanvassAutomation.php:185 CanvassAutomation.php:196
 #: CanvassAutomation.php:207 CanvassAutomation.php:218
 msgid "Check to confirm"
-msgstr "Kiểm tra để xác nhận"
+msgstr "Chọn để xác nhận"
 
 #: CanvassAutomation.php:169
 msgid "Assign Canvassers"
-msgstr "Gán Canvassers"
+msgstr ""
 
 #: CanvassAutomation.php:173
 msgid "Randomly assign canvassers to all Families.  The Canvassers are taken from the &quot;Canvassers&quot; Group."
-msgstr "Ngẫu nhiên gán canvassers cho tất cả các gia đình. Các Canvassers được lấy từ & quot; Canvassers & quot; Nhóm."
+msgstr ""
 
 #: CanvassAutomation.php:180
 msgid "Assign To Non Pledging"
-msgstr "Gán Để không cam kết"
+msgstr ""
 
 #: CanvassAutomation.php:184
 msgid "Randomly assign canvassers to non-pledging Families.  The Canvassers are taken from the &quot;BraveCanvassers&quot; Group."
-msgstr "Ngẫu nhiên gán canvassers để gia đình không cam kết. Các Canvassers được lấy từ & quot; BraveCanvassers & quot; Nhóm."
+msgstr ""
 
 #: CanvassAutomation.php:191
 msgid "Clear Canvasser Assignments"
-msgstr "Bài tập người vận động rõ ràng"
+msgstr ""
 
 #: CanvassAutomation.php:195
 msgid "Clear all the canvasser assignments for all families."
-msgstr "Xóa tất cả các bài tập người vận động cho tất cả các gia đình."
+msgstr ""
 
 #: CanvassAutomation.php:195
 msgid "Important note: this will lose any canvasser assignments that have been made by hand."
-msgstr "Lưu ý quan trọng: điều này sẽ mất bất kỳ tập người vận động đã được thực hiện bằng tay."
+msgstr ""
 
 #: CanvassAutomation.php:202
 msgid "Enable Canvass for All Families"
-msgstr "Kích hoạt tính năng Canvass cho tất cả gia đình"
+msgstr ""
 
 #: CanvassAutomation.php:206
 msgid "Turn on the &quot;Ok To Canvass&quot; field for all Families."
-msgstr "Bật & quot; Ok để vận động & quot; trường của tất cả các gia đình."
+msgstr ""
 
 #: CanvassAutomation.php:206 CanvassAutomation.php:217
 msgid "Important note: this will lose any &quot;Ok To Canvass&quot; fields that have been set by hand."
-msgstr "Lưu ý quan trọng: điều này sẽ mất bất kỳ & quot; Ok Để Canvass & quot; các lĩnh vực đã được thiết lập bằng tay."
+msgstr ""
 
 #: CanvassAutomation.php:213
 msgid "Disable Canvass for All Families"
-msgstr "Vô hiệu hóa Canvass cho tất cả gia đình"
+msgstr ""
 
 #: CanvassAutomation.php:217
 msgid "Turn off the &quot;Ok To Canvass&quot; field for all Families"
-msgstr "Tắt các & quot; Ok để vận động & quot; trường của tất cả gia đình"
+msgstr ""
 
 #: CanvassAutomation.php:224
 msgid "Briefing Sheets"
-msgstr "Tấm Briefing"
+msgstr ""
 
 #: CanvassAutomation.php:228
 msgid "Generate a PDF containing briefing sheets for all Families, sorted by canvasser."
-msgstr "Tạo một file PDF có chứa tấm dẫn cho tất cả các gia đình, được sắp xếp bởi người vận động."
+msgstr ""
 
 #: CanvassAutomation.php:234
 msgid "Progress Report"
@@ -793,7 +794,7 @@ msgstr "Báo cáo Tiến độ"
 
 #: CanvassAutomation.php:238
 msgid "Generate a PDF containing a progress report.  The progress report includes information on the overall progress of the canvass, and the progress of individual canvassers."
-msgstr "Tạo một file PDF có chứa một báo cáo tiến độ. Các báo cáo tiến độ bao gồm các thông tin về tiến độ tổng thể của kiểm phiếu, và sự tiến bộ của canvassers cá nhân."
+msgstr ""
 
 #: CanvassAutomation.php:244
 msgid "Summary Report"
@@ -801,23 +802,23 @@ msgstr "Báo cáo hồ sơ tổng hợp"
 
 #: CanvassAutomation.php:248
 msgid "Generate a PDF containing a summary report.  The summary report includes comments extracted from the canvass data."
-msgstr "Tạo một file PDF có chứa một báo cáo tóm tắt. Báo cáo tóm tắt những ý kiến ​​thu được chiết xuất từ ​​các dữ liệu kiểm phiếu."
+msgstr ""
 
 #: CanvassAutomation.php:254
 msgid "Not Interested Report"
-msgstr "Không quan tâm Báo cáo"
+msgstr ""
 
 #: CanvassAutomation.php:258
 msgid "Generate a PDF containing a report of the families marked &quot;Not Interested&quot; by the canvasser."
-msgstr "Tạo một file PDF có chứa một báo cáo của các gia đình được đánh dấu & quot; Không quan tâm & quot; bởi những người vận động."
+msgstr ""
 
 #: CanvassEditor.php:46
 msgid " Canvass Input for the "
-msgstr " Đầu vào kiểm phiếu cho "
+msgstr ""
 
 #: CanvassEditor.php:173 UserEditor.php:405
 msgid "Canvasser:"
-msgstr "người vận động:"
+msgstr ""
 
 #: CanvassEditor.php:208
 msgid "Positive"
@@ -2443,7 +2444,7 @@ msgstr "Chúng tôi không thể tìm thấy gia đình bạn đang tìm kiếm.
 
 #: FamilyView.php:864 PersonView.php:808
 msgid "return to member dashboard"
-msgstr "quay trở lại bảng điều khiển thành viên"
+msgstr "quay trở lại bảng quản lý thành viên"
 
 #: FinancialReports.php:35 ReportList.php:35
 msgid "Financial Reports"
@@ -3368,7 +3369,7 @@ msgstr "Current Role:"
 
 #: MembersDashboard.php:13
 msgid "Members Dashboard"
-msgstr ""
+msgstr "Bảng quản lý Thành viên"
 
 #: MembersDashboard.php:74
 msgid "Members Functions"
@@ -3509,7 +3510,7 @@ msgstr "Các con?"
 
 #: Menu.php:56
 msgid "Welcome to <b>Church</b>CRM"
-msgstr "Chào mừng đến với <b> Giáo </ b> CRM"
+msgstr "Chào mừng bạn đến với <b>Hệ Thống Quản Lý Hội Thánh</ b>"
 
 #: Menu.php:110 sundayschool/SundaySchoolDashboard.php:132
 msgid "Sunday School Classes"
@@ -4928,7 +4929,7 @@ msgstr "ChurchCRM MRBS Portal"
 
 #: email/Dashboard.php:24
 msgid "eMail Dashboard"
-msgstr "Bảng điều khiển eMail"
+msgstr "Bảng quản lý eMail"
 
 #: email/MailChimpMissingReport.php:22
 msgid "People not in Mailchimp"
@@ -5192,7 +5193,7 @@ msgstr ""
 
 #: Include/Header-function.php:293 Include/Header-function.php:489
 msgid "Dashboard"
-msgstr "bảng điều khiển"
+msgstr "Trang Chủ"
 
 #: Include/Header-function.php:346
 msgid "Toggle navigation"
@@ -5216,7 +5217,7 @@ msgstr ""
 
 #: Include/Header-function.php:508
 msgid "Home"
-msgstr "Nhà"
+msgstr "Trang Chủ"
 
 #: Include/LabelFunctions.php:46
 msgid "Font:"
@@ -5608,7 +5609,7 @@ msgstr "Hủy"
 
 #: sundayschool/SundaySchoolDashboard.php:39
 msgid "Sunday School Dashboard"
-msgstr "Bảng điều khiển Trường Chúa Nhật"
+msgstr "Bảng quản lý Trường Chúa Nhật"
 
 #: sundayschool/SundaySchoolDashboard.php:62
 msgid "Classes"
@@ -5708,7 +5709,7 @@ msgstr ""
 
 #: 
 msgid "Members"
-msgstr ""
+msgstr "Thành viên"
 
 #: 
 msgid "Add New Person"
@@ -5772,7 +5773,7 @@ msgstr ""
 
 #: 
 msgid "View All Fundraisers"
-msgstr ""
+msgstr "Xem tất cả"
 
 #: 
 msgid "Create New Fundraiser"
@@ -6129,7 +6130,7 @@ msgstr ""
 
 #: email/Dashboard.php:63
 msgid "Members:"
-msgstr ""
+msgstr "Thành viên"
 
 #: email/Dashboard.php:64
 msgid "Campaigns:"
